welcome.lessons.welcome.array.has271.Has271.scala.error
has271:7: error: illegal start of simple expression
			else if (nums(x)==2&&nums(x+1)==7&&((nums(x+2)==3||nums(x+2)==2||nums(x+2)==1||nums(x+2)== -1||nums(x+2)==0)))) i=true
                                                                                                                                      ^